Clean up all PMD and Checkstyle warnings